Added UI Classes for UI Scenarios
Added Webdriver components, PageObjects, Fixtures and features

--- a/icon-automation-project/Icon-Automation-Specs/Icon-Automation-Specs.csproj
+++ b/icon-automation-project/Icon-Automation-Specs/Icon-Automation-Specs.csproj
@@ -22,6 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="chromedriver.exe">
+      <CopyToOutputDirectory>Never</CopyToOutputDirectory>
+    </None>
     <None Update="config.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
