--- a/icon-automation-project/Icon-Automation-Specs/config.json
+++ b/icon-automation-project/Icon-Automation-Specs/config.json
@@ -1,10 +1,12 @@
 {
-  "url": "https://reqres.in/api/",
+  "uiBaseUrl": "https://www.evernote.com/Login.action",
+  "apiUrl": "https://reqres.in/api/",
+  "weatherStackApiUrl": "https://api.weatherstack.com/",
   "timeout": 30,
   "retries": 3,
   "apiKey": "reqres-free-v1",
-  "testData": {
-    "scenario_01_page_1": {
+  "testDataApi": {
+    "scenario_api_01_page_1": {
       "page": 1,
       "pageSize": 6,
       "total": 12,
@@ -21,7 +23,7 @@
         "text": "Tired of writing endless social media content? Let Content Caddy generate it for you."
       }
     },
-    "scenario_02_page_2": {
+    "scenario_api_02_page_2": {
       "page": 2,
       "pageSize": 6,
       "total": 12,
@@ -38,7 +40,7 @@
         "text": "Tired of writing endless social media content? Let Content Caddy generate it for you."
       }
     },
-    "scenario_03_page_12": {
+    "scenario_api_03_page_12": {
       "page": 12,
       "pageSize": 6,
       "total": 12,
@@ -48,6 +50,14 @@
         "url": "https://contentcaddy.io?utm_source=reqres&utm_medium=json&utm_campaign=referral",
         "text": "Tired of writing endless social media content? Let Content Caddy generate it for you."
       }
+    }
+  },
+  "testDataUi": {
+    "scenario_ui_01": {
+      "email": "umm360@gmail.com",
+      "correctPassword": "@Icon2025",
+      "incorrectPassword": "T35T!nG123",
+      "errorMessage": "Please verify your credentials. The password entered is incorrect."
     }
   }
 }
