--- a/icon-automation-project/icon-automation-libs/Icon-Automation-Libs.csproj
+++ b/icon-automation-project/icon-automation-libs/Icon-Automation-Libs.csproj
@@ -8,6 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="AngleSharp" Version="1.3.0" />
     <PackageReference Include="AutoFixture" Version="4.18.1" />
     <PackageReference Include="AutoMapper" Version="14.0.0" />
     <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.16.3" />
@@ -19,6 +20,10 @@
     <PackageReference Include="LightBDD.Framework" Version="3.11.0" />
     <PackageReference Include="LightBDD.NUnit3" Version="3.11.0" />
     <PackageReference Include="Polly" Version="8.6.1" />
+    <PackageReference Include="Selenium.Chrome.WebDriver" Version="85.0.0" />
+    <PackageReference Include="Selenium.Support" Version="4.33.0" />
+    <PackageReference Include="Selenium.WebDriver" Version="4.33.0" />
+    <PackageReference Include="Sketch7.Core" Version="0.2.0" />
   </ItemGroup>
 
 </Project>
