Added WeatherStack Scenario
I added weatherstack components within library and also scenario within feature file

--- a/icon-automation-project/Icon-Automation-Specs/Icon-Automation-Specs.csproj
+++ b/icon-automation-project/Icon-Automation-Specs/Icon-Automation-Specs.csproj
@@ -2,6 +2,7 @@
 
   <PropertyGroup>
     <TargetFramework>net9.0</TargetFramework>
+	 <RootNamespace>Icon_Automation_Specs</RootNamespace>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="AutoMapper" Version="14.0.0" />
@@ -22,6 +23,9 @@
   </ItemGroup>
 
   <ItemGroup>
+    <None Update="AssertionData\Weather_Conditions.csv">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="chromedriver.exe">
       <CopyToOutputDirectory>Never</CopyToOutputDirectory>
     </None>
