--- a/icon-automation-project/icon-automation-libs/Icon-Automation-Libs.csproj
+++ b/icon-automation-project/icon-automation-libs/Icon-Automation-Libs.csproj
@@ -11,6 +11,7 @@
     <PackageReference Include="AngleSharp" Version="1.3.0" />
     <PackageReference Include="AutoFixture" Version="4.18.1" />
     <PackageReference Include="AutoMapper" Version="14.0.0" />
+    <PackageReference Include="CsvHelper" Version="33.1.0" />
     <PackageReference Include="Elastic.Clients.Elasticsearch" Version="8.16.3" />
     <PackageReference Include="Elastic.Transport" Version="0.9.2" />
     <PackageReference Include="FluentAssertions" Version="8.3.0" />
