added run.cmd file

--- a/icon-automation-project/Icon-Automation-Specs/Icon-Automation-Specs.csproj
+++ b/icon-automation-project/Icon-Automation-Specs/Icon-Automation-Specs.csproj
@@ -32,6 +32,9 @@
     <None Update="config.json">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="icon.runsettings">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
